actualizacion de home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <!-- sidebar -->
 
 <shared-sidebar></shared-sidebar>
-<gifs-home-pages></gifs-home-pages>
+
 
   <!-- Home page -->
-
+  <gifs-home-pages class="flex-fill"></gifs-home-pages>
 </div>
