--- a/src/app/gifs/pages/home/home-page.component.html
+++ b/src/app/gifs/pages/home/home-page.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12">
 <!-- busqueda -->
-        1
+      <gifs-search-box></gifs-search-box>
     </div>
 
     <div class="col-12 pt-2">
