inicio de tardea

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,5 @@
 
 
   <!-- Home page -->
-  <gifs-home-pages class="flex-fill"></gifs-home-pages>
+  <gifs-home-pages class="flex-fill p-3"></gifs-home-pages>
 </div>
