--- a/src/app/gifs/pages/home/home-page.component.html
+++ b/src/app/gifs/pages/home/home-page.component.html
@@ -7,7 +7,12 @@
     <div class="col-12 pt-2">
 
         <!-- listado de gifs -->
-        2
+        <ul>
+            <li>Primero</li>
+            <li>Segundo</li>
+            <li>Tercero</li>
+            <li>Cuarto</li>
+        </ul>
 
     </div>
 
