--- a/src/app/gifs/pages/home/home-page.component.html
+++ b/src/app/gifs/pages/home/home-page.component.html
@@ -7,13 +7,11 @@
     <div class="col-12 pt-2">
 
         <!-- listado de gifs -->
-        <ul>
-            <li>Primero</li>
-            <li>Segundo</li>
-            <li>Tercero</li>
-            <li>Cuarto</li>
-        </ul>
-
+        <!-- card-list, .ts,.html -->
+      
+       
+            <gifs-card-list></gifs-card-list>
+        
+    
     </div>
-
 </div>
