--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,11 +4,10 @@
 <hr class="text-white text">
 <div class="list-group list-reset">
 
-<button class="list-group-item list-group-item-action">
-    Valorant
+<button *ngFor="let tag of tags" class="list-group-item list-group-item-action">
+    {{tag | titlecase}}
 </button>
 
 </div>
-
 
 </div>
