--- a/src/app/gifs/pages/home/home-page.component.html
+++ b/src/app/gifs/pages/home/home-page.component.html
@@ -10,7 +10,7 @@
         <!-- card-list, .ts,.html -->
       
        
-            <gifs-card-list></gifs-card-list>
+            <gifs-card-list [gifs]="gifs"></gifs-card-list>
         
     
     </div>
